--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -10,6 +10,8 @@ remappings = [
     "Solidity-RLP/=lib/Solidity-RLP/contracts/",
     "aa/=lib/aa-v0.6/contracts/",
     "solady/=lib/solady/src/",
+    "optimism-contracts/=lib/optimism/packages/contracts-bedrock/src",
+    "optimism-interfaces/=lib/optimism/packages/contracts-bedrock/interfaces",
 ]
 
 [fmt]
